--- a/reports/CucumberReports/cucumber-reports/cucumber-html-reports/overview-features.html
+++ b/reports/CucumberReports/cucumber-reports/cucumber-html-reports/overview-features.html
@@ -50,8 +50,8 @@ $(document).ready(function() {
     var chartData = {
         datasets: [{
             data: [
-                186,
-                2,
+                188,
+                0,
                 0,
                 0,
                 0
@@ -106,8 +106,8 @@ $(document).ready(function() {
     var chartData = {
         datasets: [{
             data: [
-                27,
-                2
+                29,
+                0
             ],
             backgroundColor: [
                 "#00B000",
@@ -153,8 +153,8 @@ $(document).ready(function() {
     var chartData = {
         datasets: [{
             data: [
-                   6,
-                   2
+                   8,
+                   0
                ],
                backgroundColor: [
                 "#00B000",
@@ -230,7 +230,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>TMDT</td>
         <td>1</td>
-      <td>07 Dec 2023, 20:14</td>
+      <td>08 Dec 2023, 23:09</td>
     </tr>
   </tbody>
 </table>
@@ -338,7 +338,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">8</td>
 
-        <td class="duration" data-value="71485049700">1:11.485</td>
+        <td class="duration" data-value="63723887300">1:3.723</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -355,7 +355,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="5638977800">5.638</td>
+        <td class="duration" data-value="5762751000">5.762</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -372,25 +372,25 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">7</td>
 
-        <td class="duration" data-value="58579201700">58.579</td>
+        <td class="duration" data-value="59821890000">59.821</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
         <td class="tagname"><a href="report-feature_3_965572540.html">Login</a></td>
 
-        <td      class="passed"    >16</td>
-        <td      class="failed"    >1</td>
+        <td      class="passed"    >17</td>
+        <td >0</td>
         <td >0</td>
         <td >0</td>
         <td >0</td>
         <td class="total">17</td>
 
-        <td  class="passed"    >3</td>
-        <td  class="failed"    >1</td>
+        <td  class="passed"    >4</td>
+        <td >0</td>
         <td class="total">4</td>
 
-        <td class="duration" data-value="21441015200">21.441</td>
-        <td class="failed">Failed</td>
+        <td class="duration" data-value="20976118700">20.976</td>
+        <td class="passed">Passed</td>
       </tr>
       <tr>
         <td class="tagname"><a href="report-feature_4_2155484580.html">Test Flow 1</a></td>
@@ -406,7 +406,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="17570231700">17.570</td>
+        <td class="duration" data-value="17939132800">17.939</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
@@ -423,25 +423,25 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="21679736300">21.679</td>
+        <td class="duration" data-value="21922431400">21.922</td>
         <td class="passed">Passed</td>
       </tr>
       <tr>
         <td class="tagname"><a href="report-feature_6_4196646110.html">Register</a></td>
 
-        <td      class="passed"    >23</td>
-        <td      class="failed"    >1</td>
+        <td      class="passed"    >24</td>
+        <td >0</td>
         <td >0</td>
         <td >0</td>
         <td >0</td>
         <td class="total">24</td>
 
-        <td  class="passed"    >5</td>
-        <td  class="failed"    >1</td>
+        <td  class="passed"    >6</td>
+        <td >0</td>
         <td class="total">6</td>
 
-        <td class="duration" data-value="33164706500">33.164</td>
-        <td class="failed">Failed</td>
+        <td class="duration" data-value="34202507400">34.202</td>
+        <td class="passed">Passed</td>
       </tr>
       <tr>
         <td class="tagname"><a href="report-feature_7_2075728867.html">Search</a></td>
@@ -457,7 +457,7 @@ $(document).ready(function() {
         <td >0</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="6578419100">6.578</td>
+        <td class="duration" data-value="6640559200">6.640</td>
         <td class="passed">Passed</td>
       </tr>
   </tbody>
@@ -465,33 +465,33 @@ $(document).ready(function() {
   <tfoot class="total">
     <tr>
       <td></td>
-      <td>186</td>
-      <td>2</td>
+      <td>188</td>
+      <td>0</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
       <td>188</td>
 
-      <td>27</td>
-      <td>2</td>
+      <td>29</td>
+      <td>0</td>
       <td>29</td>
 
-      <td class="duration">3:56.137</td>
+      <td class="duration">3:50.989</td>
       <td>8</td>
     </tr>
     <tr>
       <td></td>
-      <td>98.94%</td>
-      <td>1.06%</td>
+      <td>100.00%</td>
+      <td>0.00%</td>
       <td>0.00%</td>
       <td>0.00%</td>
       <td>0.00%</td>
       <td></td>
-      <td>93.10%</td>
-      <td>6.90%</td>
+      <td>100.00%</td>
+      <td>0.00%</td>
       <td></td>
       <td></td>
-      <td>75.00%</td>
+      <td>100.00%</td>
     </tr>
   </tfoot>
 </table>
